--- a/pr1.ipynb
+++ b/pr1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": 635,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 636,
    "metadata": {},
    "outputs": [
     {
@@ -22,10 +22,10 @@
      "output_type": "stream",
      "text": [
       "source: [1 2 3 4 5 6 7 8]\n",
-      "index: [ True  True  True  True False  True False False]\n",
-      "transmitted1--> [1 2 3 4 6]\n",
-      "channel_coeff1--> [1.29741283 1.89728128 2.39010083 1.613715   1.99590914]\n",
-      "recieved1--> [ 5.92873646 10.63021913 15.13990426 21.93662601 33.76473485]\n",
+      "index: [False  True False False False False  True False]\n",
+      "transmitted1--> [2 7]\n",
+      "channel_coeff1--> [1.46442992 1.20574946]\n",
+      "recieved1--> [ 69.24600532 324.61097806]\n",
       "\n",
       "\n"
      ]
@@ -53,10 +53,10 @@
     "channel_coeff1=channel_coeff[index]\n",
     "print(\"channel_coeff1-->\",channel_coeff1)\n",
     "\n",
-    "pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_coeff[index])\n",
+    "pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_coeff1)\n",
     "#print(\"pre_process\",pre_process)\n",
     "\n",
-    "post_process=(np.sum(np.mean(pre_process*channel_coeff[index]))) / ( np.sum(np.var(pre_process*channel_coeff[index])) + 2*(np.var(channel_coeff[index])) )\n",
+    "post_process=(np.sum(np.mean(pre_process*channel_coeff1))) / ( np.sum(np.var(pre_process*channel_coeff1)) + 2*(np.var(channel_coeff1)) )\n",
     "#print(\"post process\",post_process)\n",
     "    \n",
     "receieved =   post_process * ( (transmitted_1 * channel_coeff1 * pre_process) + np.random.normal(0,1,len(transmitted_1)))\n",
@@ -67,18 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 637,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "source: [5 7 8]\n",
-      "index: [ True  True False]\n",
-      "transmitted2--> [5 7]\n",
-      "channel_coeff2--> [1.68460326 1.8401784 ]\n",
-      "recieved--> [537.32457604 677.44799584]\n",
+      "source: [1 3 4 5 6 8]\n",
+      "index: [False False False  True  True  True]\n",
+      "transmitted2--> [5 6 8]\n",
+      "channel_coeff2--> [1.77688564 1.34159001 2.18534781]\n",
+      "recieved--> [29.1301851  32.3289999  41.50845431]\n",
       "\n",
       "\n"
      ]
@@ -98,14 +98,16 @@
     "trasnmitted_2=source[index]\n",
     "print(\"transmitted2-->\",trasnmitted_2)\n",
     "\n",
-    "pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_coeff[index])\n",
-    "#print(\"pre_process\",pre_process)\n",
-    "\n",
-    "post_process=(np.sum(np.mean(pre_process*channel_coeff[index]))) / ( np.sum(np.var(pre_process*channel_coeff[index])) + 2*(np.var(channel_coeff[index])) )\n",
-    "#print(\"post process\",post_process)\n",
-    "    \n",
     "channel_coeff1=channel_coeff[index]\n",
     "print(\"channel_coeff2-->\",channel_coeff1)\n",
+    "\n",
+    "pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_coeff1)\n",
+    "#print(\"pre_process\",pre_process)\n",
+    "\n",
+    "post_process=(np.sum(np.mean(pre_process*channel_coeff1))) / ( np.sum(np.var(pre_process*channel_coeff1)) + 2*(np.var(channel_coeff1)) )\n",
+    "#print(\"post process\",post_process)\n",
+    "    \n",
+    "\n",
     "    \n",
     "receieved =   post_process * ( (trasnmitted_2 * channel_coeff1 * pre_process) + np.random.normal(0,1,len(trasnmitted_2)))\n",
     "print(\"recieved-->\",receieved)\n",
@@ -115,18 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 638,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "source: [8]\n",
-      "index: [False]\n",
-      "trasnmitted3--> []\n",
-      "channel_coeff2--> []\n",
-      "recieved--> []\n",
+      "source: [1 3 4]\n",
+      "index: [ True  True False]\n",
+      "trasnmitted3--> [1 3]\n",
+      "channel_coeff2--> [1.31440512 2.41810032]\n",
+      "recieved--> [3.41216987 2.73026927]\n",
       "\n",
       "\n"
      ]
@@ -151,10 +153,10 @@
     "channel_coeff1=channel_coeff[index]\n",
     "print(\"channel_coeff2-->\",channel_coeff1)\n",
     "\n",
-    "pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_coeff[index])\n",
+    "pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_coeff1)\n",
     "#print(\"pre_process\",pre_process)\n",
     "\n",
-    "post_process=(np.sum(np.mean(pre_process*channel_coeff[index]))) / ( np.sum(np.var(pre_process*channel_coeff[index])) + 2*(np.var(channel_coeff[index])) )\n",
+    "post_process=(np.sum(np.mean(pre_process*channel_coeff1))) / ( np.sum(np.var(pre_process*channel_coeff1)) + 2*(np.var(channel_coeff1)) )\n",
     "#print(\"post process\",post_process)\n",
     "    \n",
     "\n",
@@ -167,21 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4 8] \n",
-      " []\n"
-     ]
-    }
-   ],
-   "source": [
-    "print( source2 , \"\\n\" , receieved)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
