--- a/pr1_3.ipynb
+++ b/pr1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,30 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "source  [1 2 3 4 5 6 7 8]\n",
-      "[1 4 5 8]\n",
-      "source: [2 3 6 7]\n",
-      "[2 6]\n",
-      "source: [3 7]\n",
-      "[3 7]\n",
-      "\n",
-      "\n",
-      "Rx [2.83223391 2.74107879 4.39326106 9.87541746 3.03008729 6.63483028\n",
-      " 3.08684992 5.17116612]\n"
+      "Tx [1 2 3 4 5] : 15\n",
+      "RX [-1.33314494  3.60396335  5.48939825  4.28946307  0.82713973] 12.876819452180062\n"
      ]
     }
    ],
    "source": [
     "pmax=2\n",
     "gain_threshold=1.1\n",
-    "no_of_sources=8\n",
+    "no_of_sources=5\n",
     "\n",
     "received=np.array([])\n",
     "\n",
@@ -43,67 +35,50 @@
     "source=source_main.copy()\n",
     "channel_coeff=np.random.rayleigh(1,len(source))\n",
     "transmitted_1=source[channel_coeff>gain_threshold]\n",
-    "channel_coeff1=channel_coeff[channel_coeff>gain_threshold]\n",
-    "pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_coeff1)\n",
-    "received= ((transmitted_1 * channel_coeff1 * pre_process) + np.random.normal(0,1,len(transmitted_1)))\n",
-    "   \n",
-    "print(\"source \",source)\n",
-    "print(transmitted_1)\n",
-    "#print(\"channel_coeff1-->\",channel_coeff1)\n",
-    "#print(\"recieved1-->\",received)\n",
-    "no_of_slots=1\n",
+    "channel_gains=channel_coeff[channel_coeff>gain_threshold]\n",
+    "pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_gains)\n",
+    "received= ((transmitted_1 * channel_gains * pre_process) + np.random.normal(0,1,len(transmitted_1)))\n",
+    " \n",
+    "#print(\"source:\",source)\n",
+    "#print(transmitted_1)\n",
+    "#print(received)\n",
+    "#print(\"\\n\")\n",
+    "no_of_slots=0\n",
     "\n",
     "\n",
-    "while(len(source)!=0):\n",
+    "while(len(source)>0):\n",
     "    no_of_slots=no_of_slots+1\n",
     "    source=source[channel_coeff<=gain_threshold]\n",
     "    \n",
     "    if len(source)==1:\n",
-    "        channel_coeff=np.random.rayleigh(1,len(source))\n",
-    "        trasnmitted_2=source\n",
-    "        pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_coeff1)\n",
-    "        received=np.append(received,((trasnmitted_2 * channel_coeff1 * pre_process) + np.random.normal(0,1,len(trasnmitted_2))))\n",
-    "        print(\"source:\",source)\n",
-    "        print(trasnmitted_2) \n",
+    "        channel_gains=np.random.rayleigh(1,len(source))\n",
+    "        trasnmitted_1=source\n",
+    "        pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_gains)\n",
+    "        received=np.append(received,((trasnmitted_1 * channel_gains * pre_process) + np.random.normal(0,1,len(trasnmitted_1))))\n",
+    "        \n",
+    "        #print(\"source:\",source)\n",
+    "        #print(trasnmitted_1)\n",
+    "        #print(received) \n",
     "        break \n",
     "     \n",
     "    if len(source)==0:\n",
     "        break\n",
     "    \n",
     "    channel_coeff=np.random.rayleigh(1,len(source))   \n",
-    "    trasnmitted_2=source[channel_coeff>gain_threshold]\n",
-    "    channel_coeff1=channel_coeff[channel_coeff>gain_threshold]\n",
-    "    pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_coeff1)\n",
-    "    received=np.append(received,((trasnmitted_2 * channel_coeff1 * pre_process) + np.random.normal(0,1,len(trasnmitted_2))))\n",
+    "    trasnmitted_1=source[channel_coeff>gain_threshold]\n",
+    "    channel_gains=channel_coeff[channel_coeff>gain_threshold]\n",
+    "    pre_process=np.minimum((np.sqrt(pmax)) ,  gain_threshold/channel_gains)\n",
+    "    received=np.append(received,((trasnmitted_1 * channel_gains * pre_process) + np.random.normal(0,1,len(trasnmitted_1))))\n",
+    "    \n",
+    "    #print(\"source:\",source)\n",
+    "    #print(trasnmitted_1)\n",
+    "    #print(received)\n",
+    "    #print(\"\\n\")\n",
+    "post_process=((np.sum(np.mean(channel_gains*pre_process)))  /  ( (np.sum(np.sum(channel_gains*pre_process)))**2 +no_of_slots*np.var(channel_coeff) ))\n",
+    "print(\"Tx\",source_main,\":\",np.sum(source_main))\n",
+    "print(\"RX\", received,np.sum(received))\n",
     "\n",
-    "    print(\"source:\",source)\n",
-    "    print(trasnmitted_2)\n",
-    "    #print(\"channel_coeff2-->\",channel_coeff1)\n",
-    "                 \n",
-    "post_process=((np.sum(np.mean(channel_coeff1*pre_process)))  /  ( (np.sum(np.sum(channel_coeff1*pre_process)))**2 +no_of_slots*np.var(channel_coeff) ))\n",
-    "print(\"\\n\")\n",
-    "print(\"Rx\",received)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tx 36 \n",
-      " Rx 39.10095355243083\n"
-     ]
-    }
-   ],
-   "source": [
-    "#post_process=(np.sum(np.mean(pre_process*channel_coeff1))) / ( np.sum(np.var(pre_process*channel_coeff1)) + 2*(np.var(channel_coeff1)) )\n",
-    "transmitted_sum=np.sum(source_main)\n",
-    "received_sum=np.sum(received)\n",
-    "print(\"Tx\",transmitted_sum,\"\\n\",\"Rx\",received_sum)\n"
+    "#post_process=(np.sum(np.mean(pre_process*channel_coeff1))) / ( np.sum(np.var(pre_process*channel_coeff1)) + 2*(np.var(channel_coeff1)) )\n"
    ]
   },
   {
