--- a/sum_over_air/jan21_v1.ipynb
+++ b/sum_over_air/jan21_v1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
      "output_type": "stream",
      "text": [
       "parameter:: 0 | chan threshold 0.4590436050264139 | power 0.004\n",
-      "\u001b[1m iter  1 \u001b[0m\n",
+      " iter  1\n",
       "\tslot 1\n",
       "\tcha coeff= [1.76405235 0.40015721 0.97873798 2.2408932  1.86755799] \n",
       "\n",
@@ -168,7 +168,7 @@
       "\tcha coeff= [] \n",
       "\n",
       "\tslot 4\n",
-      "\u001b[1m iter  2 \u001b[0m\n",
+      " iter  2\n",
       "\tslot 1\n",
       "\tcha coeff= [ 1.62434536 -0.61175641 -0.52817175 -1.07296862  0.86540763] \n",
       "\n",
@@ -180,7 +180,7 @@
       "\n",
       "\tslot 4\n",
       "parameter:: 5 | chan threshold 0.4590436050264139 | power 0.004\n",
-      "\u001b[1m iter  1 \u001b[0m\n",
+      " iter  1\n",
       "\tslot 1\n",
       "\tcha coeff= [1.76405235 0.40015721 0.97873798 2.2408932  1.86755799] \n",
       "\n",
@@ -191,7 +191,7 @@
       "\tcha coeff= [] \n",
       "\n",
       "\tslot 4\n",
-      "\u001b[1m iter  2 \u001b[0m\n",
+      " iter  2\n",
       "\tslot 1\n",
       "\tcha coeff= [ 1.62434536 -0.61175641 -0.52817175 -1.07296862  0.86540763] \n",
       "\n",
@@ -203,7 +203,7 @@
       "\n",
       "\tslot 4\n",
       "parameter:: 10 | chan threshold 0.4590436050264139 | power 0.004\n",
-      "\u001b[1m iter  1 \u001b[0m\n",
+      " iter  1\n",
       "\tslot 1\n",
       "\tcha coeff= [1.76405235 0.40015721 0.97873798 2.2408932  1.86755799] \n",
       "\n",
@@ -214,7 +214,7 @@
       "\tcha coeff= [] \n",
       "\n",
       "\tslot 4\n",
-      "\u001b[1m iter  2 \u001b[0m\n",
+      " iter  2\n",
       "\tslot 1\n",
       "\tcha coeff= [ 1.62434536 -0.61175641 -0.52817175 -1.07296862  0.86540763] \n",
       "\n",
@@ -226,7 +226,7 @@
       "\n",
       "\tslot 4\n",
       "parameter:: 15 | chan threshold 0.4590436050264139 | power 0.004\n",
-      "\u001b[1m iter  1 \u001b[0m\n",
+      " iter  1\n",
       "\tslot 1\n",
       "\tcha coeff= [1.76405235 0.40015721 0.97873798 2.2408932  1.86755799] \n",
       "\n",
@@ -237,7 +237,7 @@
       "\tcha coeff= [] \n",
       "\n",
       "\tslot 4\n",
-      "\u001b[1m iter  2 \u001b[0m\n",
+      " iter  2\n",
       "\tslot 1\n",
       "\tcha coeff= [ 1.62434536 -0.61175641 -0.52817175 -1.07296862  0.86540763] \n",
       "\n",
@@ -249,7 +249,7 @@
       "\n",
       "\tslot 4\n",
       "parameter:: 20 | chan threshold 0.4590436050264139 | power 0.004\n",
-      "\u001b[1m iter  1 \u001b[0m\n",
+      " iter  1\n",
       "\tslot 1\n",
       "\tcha coeff= [1.76405235 0.40015721 0.97873798 2.2408932  1.86755799] \n",
       "\n",
@@ -260,7 +260,7 @@
       "\tcha coeff= [] \n",
       "\n",
       "\tslot 4\n",
-      "\u001b[1m iter  2 \u001b[0m\n",
+      " iter  2\n",
       "\tslot 1\n",
       "\tcha coeff= [ 1.62434536 -0.61175641 -0.52817175 -1.07296862  0.86540763] \n",
       "\n",
@@ -283,7 +283,7 @@
     "    \n",
     "    error=[]\n",
     "    for j in range(iterations):\n",
-    "        print(\"\\033[1m iter \",j+1,\"\\033[0m\")\n",
+    "        print(\" iter \",j+1)\n",
     "        source=source1(no_of_sources)\n",
     "        # print(\"main source:\",source)\n",
     "        # source=source_main.copy()\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
